--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -25,8 +25,8 @@
 				<main>
 					<div class="row mb-5 pb-4">
 						<div class="col-12">
-							<!-- Video player 1422x800 -->
-							<img src="" alt="" srcset="">
+							<!-- photo -->
+							<img src="<%= photo.image %>" alt="Image" class ="img-fluid tm-catalog-item-img">
 						</div>
 					</div>
 					<div class="row mb-5 pb-5">
