fotograf bilgilerini guncelleme eklendi

--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -38,23 +38,12 @@
 								</div>							
 						</div>
 						<div class="col-xl-4 col-lg-5">
-							<!-- Share box -->
 							<div class="tm-bg-gray tm-share-box">
-								<h6 class="tm-share-box-title mb-4">Share this video</h6>
-								<div class="mb-5 d-flex">
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-facebook"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-twitter"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="fab fa-pinterest"></i></a>
-									<a href="" class="tm-bg-white tm-share-button"><i class="far fa-envelope"></i></a>
+								<div class="text-center">
+									<a href="/photos/edit/<%= photo._id %>" class="btn btn-primary p-0 mb-4 tm-btn-animate tm-btn-download tm-icon-download"><span>Update Details</span></a>
 								</div>
-								<p class="mb-4">Author: <a href="https://templatemo.com" class="tm-text-link">TemplateMo</a></p>
-								<a href="#" class="tm-bg-white px-5 mb-4 d-inline-block tm-text-primary tm-likes-box tm-liked">
-									<i class="fas fa-heart mr-3 tm-liked-icon"></i>
-									<i class="far fa-heart mr-3 tm-not-liked-icon"></i>
-									<span id="tm-likes-count">486 likes</span>
-								</a>
-								<div>
-									<button class="btn btn-primary p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Download Video</span></button>	
+								<div class="text-center">
+								<button class="btn btn-danger btn-lg p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Delete</span></button>
 								</div>								
 							</div>
 						</div>
