delete fotograf silme islemi eklendi

--- a/views/photo.ejs
+++ b/views/photo.ejs
@@ -43,84 +43,13 @@
 									<a href="/photos/edit/<%= photo._id %>" class="btn btn-primary p-0 mb-4 tm-btn-animate tm-btn-download tm-icon-download"><span>Update Details</span></a>
 								</div>
 								<div class="text-center">
-								<button class="btn btn-danger btn-lg p-0 tm-btn-animate tm-btn-download tm-icon-download"><span>Delete</span></button>
+									<a href="/photos/<%= photo._id %>?_method=DELETE" class="btn btn-danger btn-lg p-0 tm-btn-animate tm-btn-download tm-icon-download"
+									onclick="return confirm('Are you sure?')"><span>Delete Photo</span></a>
 								</div>								
 							</div>
 						</div>
 					</div>
-					<div class="row pt-4 pb-5">
-						<div class="col-12">
-							<h2 class="mb-5 tm-text-primary">Related Videos for You</h2>
-							<div class="row tm-catalog-item-list">
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-01.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-02.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-03.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-04.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>    
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Nam tincidunt consectetur</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-05.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Praesent posuere rhoncus</h3>		                                
-		                            </div>
-		                        </div>
-		                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
-		                            <div class="position-relative tm-thumbnail-container">
-		                                <img src="img/tn-06.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
-		                                <a href="video-page.html" class="position-absolute tm-img-overlay">
-		                                    <i class="fas fa-play tm-overlay-icon"></i>
-		                                </a>
-		                            </div>                            
-		                            <div class="p-3 tm-catalog-item-description">
-		                                <h3 class="tm-text-gray text-center tm-catalog-item-title">Turpis massa aliquam</h3>		                                
-		                            </div>
-		                        </div>
-		                    </div>
-						</div>
-					</div>
+					
 				</main>
 
 				<%- include ('partials/_footer') -%>
